kustomize/base/kubedb-webhook-server/templates/schema-manager/validating-webhook.yaml
---
# Source: kubedb/charts/kubedb-webhook-server/templates/schema-manager/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.schema.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-schema-manager
    helm.sh/chart: kubedb-webhook-server-v0.27.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/version: "v0.27.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: mysqldatabasewebhook.validators.schema.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.schema.kubedb.com/v1alpha1/mysqldatabasewebhooks
    caBundle: dW5rbm93bg==
  rules:
  - apiGroups: ["schema.kubedb.com"]
    apiVersions: ["*"]
    resources: ["mysqldatabases"]
    operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: mongodbdatabasewebhook.validators.schema.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.schema.kubedb.com/v1alpha1/mongodbdatabasewebhooks
    caBundle: dW5rbm93bg==
  rules:
  - apiGroups: ["schema.kubedb.com"]
    apiVersions: ["*"]
    resources: ["mongodbdatabases"]
    operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: postgresdatabasewebhook.validators.schema.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.schema.kubedb.com/v1alpha1/postgresdatabasewebhooks
    caBundle: dW5rbm93bg==
  rules:
  - apiGroups: ["schema.kubedb.com"]
    apiVersions: ["*"]
    resources: ["postgresdatabases"]
    operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
